# kalman-ml

./: .gitignore  README.md  pyproject.toml
backtesting/: __init__.py  backtester.py  metrics.py  report.py  result.py
config/: __init__.py  base.py  experiment.py  indicator.py
core/: __init__.py  bar.py  portfolio.py  position_series.py  price_series.py  trade.py
data/: __init__.py  csv_loader.py  loader.py
indicators/: __init__.py  base.py  indicator_set.py  kalman.py  result.py
kalman_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml/: __init__.py
plotting/: __init__.py  backtest.py  drawing.py  indicator.py  price.py
scripts/: run_backtest.py
strategies/: __init__.py  base.py  kalman_crossover.py
tests/: conftest.py  test_bar.py  test_portfolio.py  test_position_series.py  test_price_series.py  test_project.py  test_trade.py
tests/backtesting/: test_backtest_result.py  test_backtester.py  test_backtester_returns.py  test_metrics.py  test_report.py
tests/config/: test_experiment_config.py  test_kalman_config.py
tests/data/: __init__.py  test_csv_loader.py  test_csv_mt5_loader.py
tests/indicators/: __init__.py  test_indicator_result.py  test_indicator_set.py  test_kalman_indicator.py
tests/plotting/: test_backtest.py  test_drawing.py  test_indicator.py  test_price.py
tests/sample_data/: mt5_sample.csv  sample_prices.csv
tests/strategies/: __init__.py  test_kalman_crossover.py  test_strategy_base.py
