[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-ml"
version = "0.1.0"
description = "Quantitative trading research framework."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Ximano" }
]

dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["ml*", "core*", "indicators*", "strategies*"]
exclude = ["notebooks*", "data*", "config*"]

[tools.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true